--- a/Webpage.html
+++ b/Webpage.html
@@ -65,7 +65,7 @@
                             </pre>
                             <pre id="prev">The template is released under the <a href="file:///Users/hindupurkedar/Desktop/web%20Assg%231/google.com">Creative Commons Attribution</a> license. This means it can be used for both private and commercial purposes,edited freely or redistributed as long as you keep thelink back to Alpha Studio. The link, however, can be moved to any other place of the site. Do not use the remplate for websites and illegal or immoral content.
 
-The image comes from <a href="file:///Users/hindupurkedar/Desktop/web%20Assg%231/google.com">PublicDomainPictures.net</a> and is in public domain. Please be aware tahat public domain content may in some cases infringe trademark, property or any other right to others, so use it at your own risk.
+The image comes from <a href="file:///Users/hindupurkedar/Desktop/web%20Assg%231/google.com">PublicDomainPictures.net</a> and is in public domain. Please be aware that public domain content may in some cases infringe trademark, property or any other right to others, so use it at your own risk.
                             </pre>
                             <div class="button">
                                 <h6>read more</h6>
